# song-riyaz

./: .gitignore  essentia_requirements.txt  full_requirements.txt  status.txt
backend/: main.py
backend-v2-backup/: main.py
backend-v3/: main.py  main_before_skey.py  main_skey_working.py  requirements.txt
frontend/app/: layout.tsx  page.tsx  page_backup_v1.tsx  robots.ts  sitemap.ts
frontend/app/analyze/: page.tsx
frontend/app/blog/: data.tsx  page.tsx
frontend/app/blog/[slug]/: page.tsx
frontend/app/blog/articles/: how-to-detect-bpm.tsx  how-to-find-the-key.tsx
frontend/app/contact/: page.tsx
frontend/app/privacy-policy/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: BlogFAQ.tsx  BlogFooter.tsx  BlogNavbar.tsx  Footer.tsx  Navbar.tsx
skey-main/: .gitignore  Dockerfile  README.md  pyproject.toml
skey-main/skey/: __init__.py  chromanet.py  cli.py  convnext.py  hcqt.py  key_detection.py
skey-main/skey/models/: skey.pt
skey-main/tests/: test_detect_key.py
skey-main/training_utils/: skey.py  skey_loss.py
skey-main/training_utils/config/: skey.gin
